// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`vaults.utils getVaultHarvestsOnChain returns vaults harvests with apr 1`] = `
Array [
  Object {
    "amount": 0.004992355665779731,
    "block": 13612910,
    "estimatedApr": 0.01,
    "eventType": "Harvest",
    "strategyBalance": 2481.941296192305,
    "timestamp": 1636878824,
    "token": "0x075b1bb99792c9e1041ba13afef80c91a1e70fb3",
  },
  Object {
    "amount": 0.01741109755651847,
    "block": 13647172,
    "estimatedApr": 0.06,
    "eventType": "Harvest",
    "strategyBalance": 2366.0613517200886,
    "timestamp": 1637346968,
    "token": "0x075b1bb99792c9e1041ba13afef80c91a1e70fb3",
  },
  Object {
    "amount": 0.02354000454094577,
    "block": 13674352,
    "estimatedApr": 0.09,
    "eventType": "Harvest",
    "strategyBalance": 2314.0426476124358,
    "timestamp": 1637717848,
    "token": "0x075b1bb99792c9e1041ba13afef80c91a1e70fb3",
  },
  Object {
    "amount": 0.014972638754161653,
    "block": 13699647,
    "estimatedApr": 0.01,
    "eventType": "Harvest",
    "strategyBalance": 2300.047794001301,
    "timestamp": 1638065247,
    "token": "0x075b1bb99792c9e1041ba13afef80c91a1e70fb3",
  },
  Object {
    "amount": 0.036611569490331085,
    "block": 13844434,
    "estimatedApr": 0.15,
    "eventType": "Harvest",
    "strategyBalance": 2285.8514972932135,
    "timestamp": 1640034477,
    "token": "0x075b1bb99792c9e1041ba13afef80c91a1e70fb3",
  },
  Object {
    "amount": 0,
    "block": 13870247,
    "estimatedApr": 0,
    "eventType": "Harvest",
    "strategyBalance": 2257.6472384811345,
    "timestamp": 1640380383,
    "token": "0x075b1bb99792c9e1041ba13afef80c91a1e70fb3",
  },
  Object {
    "amount": 0.013538827735603299,
    "block": 13896464,
    "estimatedApr": 0,
    "eventType": "Harvest",
    "strategyBalance": 2255.6396126895474,
    "timestamp": 1640731025,
    "token": "0x075b1bb99792c9e1041ba13afef80c91a1e70fb3",
  },
  Object {
    "amount": 84.17266705379542,
    "block": 13612910,
    "estimatedApr": 228.46,
    "eventType": "TreeDistribution",
    "strategyBalance": 2481.941296192305,
    "timestamp": 1636878824,
    "token": "0x2B5455aac8d64C14786c3a29858E43b5945819C0",
  },
  Object {
    "amount": 24.235735970268347,
    "block": 13612910,
    "estimatedApr": 65.78,
    "eventType": "TreeDistribution",
    "strategyBalance": 2481.941296192305,
    "timestamp": 1636878824,
    "token": "0xfd05D3C7fe2924020620A8bE4961bBaA747e6305",
  },
  Object {
    "amount": 142.7150262817037,
    "block": 13647172,
    "estimatedApr": 512.88,
    "eventType": "TreeDistribution",
    "strategyBalance": 2366.0613517200886,
    "timestamp": 1637346968,
    "token": "0xfd05D3C7fe2924020620A8bE4961bBaA747e6305",
  },
  Object {
    "amount": 725.4052573992801,
    "block": 13674352,
    "estimatedApr": 2845.69,
    "eventType": "TreeDistribution",
    "strategyBalance": 2314.0426476124358,
    "timestamp": 1637717848,
    "token": "0x2B5455aac8d64C14786c3a29858E43b5945819C0",
  },
  Object {
    "amount": 62.74553463488707,
    "block": 13674352,
    "estimatedApr": 246.14,
    "eventType": "TreeDistribution",
    "strategyBalance": 2314.0426476124358,
    "timestamp": 1637717848,
    "token": "0xfd05D3C7fe2924020620A8bE4961bBaA747e6305",
  },
  Object {
    "amount": 109.38092107509485,
    "block": 13699647,
    "estimatedApr": 76.16,
    "eventType": "TreeDistribution",
    "strategyBalance": 2300.047794001301,
    "timestamp": 1638065247,
    "token": "0xfd05D3C7fe2924020620A8bE4961bBaA747e6305",
  },
  Object {
    "amount": 895.551949222039,
    "block": 13844434,
    "estimatedApr": 3571.83,
    "eventType": "TreeDistribution",
    "strategyBalance": 2285.8514972932135,
    "timestamp": 1640034477,
    "token": "0x2B5455aac8d64C14786c3a29858E43b5945819C0",
  },
  Object {
    "amount": 113.37673517546946,
    "block": 13844434,
    "estimatedApr": 452.19,
    "eventType": "TreeDistribution",
    "strategyBalance": 2285.8514972932135,
    "timestamp": 1640034477,
    "token": "0xfd05D3C7fe2924020620A8bE4961bBaA747e6305",
  },
  Object {
    "amount": 50.123260504732386,
    "block": 13896464,
    "estimatedApr": 0,
    "eventType": "TreeDistribution",
    "strategyBalance": 2255.6396126895474,
    "timestamp": 1640731025,
    "token": "0xfd05D3C7fe2924020620A8bE4961bBaA747e6305",
  },
]
`;

exports[`vaults.utils getVaultPerformance no rewards or harvests returns value sources from fallback methods 1`] = `
Array [
  YieldSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "apr": 56.764799999999994,
    "boostable": false,
    "chain": "ethereum",
    "chainAddress": "ethereum-0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "id": "ethereum-0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28_precompound_vault_compounding_flat",
    "maxApr": 56.764799999999994,
    "minApr": 56.764799999999994,
    "name": "Vault Compounding",
    "type": "precompound",
  },
  YieldSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "apr": 74.23705993472916,
    "boostable": false,
    "chain": "ethereum",
    "chainAddress": "ethereum-0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "id": "ethereum-0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28_compound_vault_compounding_flat",
    "maxApr": 74.23705993472916,
    "minApr": 74.23705993472916,
    "name": "Vault Compounding",
    "type": "compound",
  },
  YieldSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "apr": 6.969,
    "boostable": true,
    "chain": "ethereum",
    "chainAddress": "ethereum-0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "id": "ethereum-0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28_emission_badger_rewards_boosted",
    "maxApr": 13.938,
    "minApr": 6.969,
    "name": "Badger Rewards",
    "type": "emission",
  },
  YieldSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "apr": 1.13,
    "boostable": false,
    "chain": "ethereum",
    "chainAddress": "ethereum-0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "id": "ethereum-0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28_lp_fee_test_lp_fees_flat",
    "maxApr": 1.13,
    "minApr": 1.13,
    "name": "Test LP Fees",
    "type": "lp_fee",
  },
]
`;

exports[`vaults.utils getVaultPerformance requests non compatible network vault performances returns value sources from fallback methods 1`] = `
Array [
  YieldSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "apr": 56.764799999999994,
    "boostable": false,
    "chain": "ethereum",
    "chainAddress": "ethereum-0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "id": "ethereum-0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28_precompound_vault_compounding_flat",
    "maxApr": 56.764799999999994,
    "minApr": 56.764799999999994,
    "name": "Vault Compounding",
    "type": "precompound",
  },
  YieldSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "apr": 74.23705993472916,
    "boostable": false,
    "chain": "ethereum",
    "chainAddress": "ethereum-0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "id": "ethereum-0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28_compound_vault_compounding_flat",
    "maxApr": 74.23705993472916,
    "minApr": 74.23705993472916,
    "name": "Vault Compounding",
    "type": "compound",
  },
  YieldSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "apr": 6.969,
    "boostable": true,
    "chain": "ethereum",
    "chainAddress": "ethereum-0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "id": "ethereum-0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28_emission_badger_rewards_boosted",
    "maxApr": 13.938,
    "minApr": 6.969,
    "name": "Badger Rewards",
    "type": "emission",
  },
  YieldSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "apr": 1.13,
    "boostable": false,
    "chain": "ethereum",
    "chainAddress": "ethereum-0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "id": "ethereum-0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28_lp_fee_test_lp_fees_flat",
    "maxApr": 1.13,
    "minApr": 1.13,
    "name": "Test LP Fees",
    "type": "lp_fee",
  },
]
`;

exports[`vaults.utils getVaultPerformance requests non standard vault performance returns value sources from fallback methods 1`] = `
Array [
  YieldSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "apr": 56.764799999999994,
    "boostable": false,
    "chain": "ethereum",
    "chainAddress": "ethereum-0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "id": "ethereum-0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28_precompound_vault_compounding_flat",
    "maxApr": 56.764799999999994,
    "minApr": 56.764799999999994,
    "name": "Vault Compounding",
    "type": "precompound",
  },
  YieldSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "apr": 74.23705993472916,
    "boostable": false,
    "chain": "ethereum",
    "chainAddress": "ethereum-0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "id": "ethereum-0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28_compound_vault_compounding_flat",
    "maxApr": 74.23705993472916,
    "minApr": 74.23705993472916,
    "name": "Vault Compounding",
    "type": "compound",
  },
  YieldSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "apr": 6.969,
    "boostable": true,
    "chain": "ethereum",
    "chainAddress": "ethereum-0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "id": "ethereum-0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28_emission_badger_rewards_boosted",
    "maxApr": 13.938,
    "minApr": 6.969,
    "name": "Badger Rewards",
    "type": "emission",
  },
  YieldSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "apr": 1.13,
    "boostable": false,
    "chain": "ethereum",
    "chainAddress": "ethereum-0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "id": "ethereum-0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28_lp_fee_test_lp_fees_flat",
    "maxApr": 1.13,
    "minApr": 1.13,
    "name": "Test LP Fees",
    "type": "lp_fee",
  },
]
`;

exports[`vaults.utils getVaultPerformance requests standard vault performance returns value sources from standard methods 1`] = `
Array [
  YieldSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "apr": 1.9605714285714286,
    "boostable": false,
    "chain": "ethereum",
    "chainAddress": "ethereum-0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "id": "ethereum-0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28_precompound_vault_compounding_flat",
    "maxApr": 1.9605714285714286,
    "minApr": 1.9605714285714286,
    "name": "Vault Compounding",
    "type": "precompound",
  },
  YieldSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "apr": 1.9791654594512487,
    "boostable": false,
    "chain": "ethereum",
    "chainAddress": "ethereum-0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "id": "ethereum-0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28_compound_vault_compounding_flat",
    "maxApr": 1.9791654594512487,
    "minApr": 1.9791654594512487,
    "name": "Vault Compounding",
    "type": "compound",
  },
  YieldSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "apr": 0.000004975832417583712,
    "boostable": false,
    "chain": "ethereum",
    "chainAddress": "ethereum-0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "id": "ethereum-0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28_distribution_badger_sett_convex_crv_flat",
    "maxApr": 0.000004975832417583712,
    "minApr": 0.000004975832417583712,
    "name": "Badger Sett Convex CRV",
    "type": "distribution",
  },
  YieldSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "apr": 0.000022426642857150473,
    "boostable": false,
    "chain": "ethereum",
    "chainAddress": "ethereum-0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "id": "ethereum-0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28_distribution_badger_vested_escrow_convex_token_flat",
    "maxApr": 0.000022426642857150473,
    "minApr": 0.000022426642857150473,
    "name": "Badger Vested Escrow Convex Token",
    "type": "distribution",
  },
  YieldSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "apr": 0.0000013944295327135587,
    "boostable": false,
    "chain": "ethereum",
    "chainAddress": "ethereum-0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "id": "ethereum-0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28_flywheel_vault_flywheel_flat",
    "maxApr": 0.0000013944295327135587,
    "minApr": 0.0000013944295327135587,
    "name": "Vault Flywheel",
    "type": "flywheel",
  },
  YieldSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "apr": 6.969,
    "boostable": true,
    "chain": "ethereum",
    "chainAddress": "ethereum-0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "id": "ethereum-0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28_emission_badger_rewards_boosted",
    "maxApr": 13.938,
    "minApr": 6.969,
    "name": "Badger Rewards",
    "type": "emission",
  },
  YieldSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "apr": 1.13,
    "boostable": false,
    "chain": "ethereum",
    "chainAddress": "ethereum-0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "id": "ethereum-0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28_lp_fee_test_lp_fees_flat",
    "maxApr": 1.13,
    "minApr": 1.13,
    "name": "Test LP Fees",
    "type": "lp_fee",
  },
]
`;

exports[`vaults.utils getVaultPerformance requests standard vault performance skips all emitted tokens with no price 1`] = `
Array [
  YieldSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "apr": 1.9605714285714286,
    "boostable": false,
    "chain": "ethereum",
    "chainAddress": "ethereum-0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "id": "ethereum-0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28_precompound_vault_compounding_flat",
    "maxApr": 1.9605714285714286,
    "minApr": 1.9605714285714286,
    "name": "Vault Compounding",
    "type": "precompound",
  },
  YieldSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "apr": 1.9791654594512487,
    "boostable": false,
    "chain": "ethereum",
    "chainAddress": "ethereum-0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "id": "ethereum-0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28_compound_vault_compounding_flat",
    "maxApr": 1.9791654594512487,
    "minApr": 1.9791654594512487,
    "name": "Vault Compounding",
    "type": "compound",
  },
  YieldSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "apr": 6.969,
    "boostable": true,
    "chain": "ethereum",
    "chainAddress": "ethereum-0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "id": "ethereum-0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28_emission_badger_rewards_boosted",
    "maxApr": 13.938,
    "minApr": 6.969,
    "name": "Badger Rewards",
    "type": "emission",
  },
  YieldSource {
    "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "apr": 1.13,
    "boostable": false,
    "chain": "ethereum",
    "chainAddress": "ethereum-0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
    "id": "ethereum-0x19d97d8fa813ee2f51ad4b4e04ea08baf4dffc28_lp_fee_test_lp_fees_flat",
    "maxApr": 1.13,
    "minApr": 1.13,
    "name": "Test LP Fees",
    "type": "lp_fee",
  },
]
`;
